@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.517 2016/09/16 06:49:49 adam Exp $
+# $NetBSD: Makefile,v 1.518 2016/09/17 02:42:08 mef Exp $
 
 COMMENT=	Databases
 
@@ -197,6 +197,7 @@ SUBDIR+=	p5-MLDBM
 SUBDIR+=	p5-MLDBM-Serializer-JSON
 SUBDIR+=	p5-MLDBM-Sync
 SUBDIR+=	p5-Net-Cassandra
+SUBDIR+=	p5-Net-FileMaker
 SUBDIR+=	p5-Net-MySQL
 SUBDIR+=	p5-ORLite
 SUBDIR+=	p5-ORLite-Migrate
